--- a/packages/store/src/assets/main.css
+++ b/packages/store/src/assets/main.css
@@ -18,6 +18,10 @@ a, li, span, p, h1, h2, h3, h4, h5, h6 {
     line-height: 1.2;
 }
 
+h2 {
+  font-size: 28px;
+}
+
 button {
     cursor: pointer;
     border-radius: 10px;
