--- a/packages/store/src/assets/main.css
+++ b/packages/store/src/assets/main.css
@@ -1,7 +1,7 @@
 @import './base.css';
 :root {
-    --primary-color: #51b53c;
-    --secondary-color: #E86A33;
+    --primary-color: #38d386;
+    --secondary-color: #ff8c2e;
 }
 @font-face {
     font-family: 'Roboto';
@@ -24,7 +24,7 @@ h2 {
 
 button {
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 5px;
     border: none;
     outline: none;
 }
